The window, laid out as Prism Launcher's
So that anyone who has used Prism feels at home in it:

- A bar on top: Add Instance (Add Group under its arrow), Folders (open
  one, or copy its path where there is no file manager), Settings, Help
  (doctor, the guide, About), and Bots and Accounts on the right.
- Instances as their bot's face with a dot saying how each is doing and
  the name under it; groups with Prism's header, a name and a line.
- On the right, for the one selected: Launch (Restart, Connect again and
  Start its bridge under its arrow), Kill, Edit, Change Group, Folder,
  Copy, Delete; for a group, Launch all, Kill all, Edit, Add to it, Add
  instance here and the same. Right-click on a group's empty space adds an
  instance or a group right there; on the background, in no group.
- Edit Instance and Settings are windows of their own with their pages
  down the left (pages.py): an instance's settings, rules, personality,
  extra mods and logs, with Launch and Kill at the bottom; the launcher's
  own page, Java, the global settings and rules, accounts and servers.
  Dialogs have Help on the left, which opens the setup guide.
- Icons of its own, drawn in code (icons.py): nothing taken from Prism's
  icon set, and in the colours of the style in use. Each makes a small
  gesture when the pointer is over it, and an instance's dot pulses while
  it works. That, and the rest of the motion (anim.py: switches that
  slide, windows and panels that fade in), can be turned off in Settings.

Also:

- Offline accounts (account add --offline NAME, or from the window): a
  player name, listed and chosen like a Microsoft account; unlike one, it
  may play in several games at once. A new instance picks its account
  from one list, or adds one on the way.
- java and java_args: the Java an instance's game runs on, and extra JVM
  flags, per instance, per group or globally; HeadlessMC is told which
  Java to launch the game with.
- delete <instance> --yes, and Delete in the